@@ -1,6 +1,8 @@
 package com.trend_now.backend.board.application;
 
+import com.trend_now.backend.board.cache.BoardCache;
 import com.trend_now.backend.board.domain.BoardCategory;
+import com.trend_now.backend.board.domain.BoardSummary;
 import com.trend_now.backend.board.domain.Boards;
 import com.trend_now.backend.board.dto.BoardInfoDto;
 import com.trend_now.backend.board.dto.BoardPagingRequestDto;
@@ -9,14 +11,17 @@ import com.trend_now.backend.board.dto.BoardSaveDto;
 import com.trend_now.backend.board.dto.RealTimeBoardTimeUpEvent;
 import com.trend_now.backend.board.dto.RealtimeBoardDto;
 import com.trend_now.backend.board.repository.BoardRepository;
-import com.trend_now.backend.exception.CustomException.NotFoundException;
+import com.trend_now.backend.board.repository.BoardSummaryRepository;
+import com.trend_now.backend.exception.customException.NotFoundException;
 import com.trend_now.backend.post.application.PostLikesService;
 import com.trend_now.backend.post.application.PostViewService;
+import java.time.Instant;
 import java.time.LocalTime;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -25,11 +30,8 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.domain.Sort.Direction;
-import org.springframework.data.redis.core.RedisCallback;
 import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.ZSetOperations.TypedTuple;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -39,15 +41,14 @@ import org.springframework.transaction.annotation.Transactional;
 @Transactional(readOnly = true)
 public class BoardRedisService {
 
-    private static final String BOARD_RANK_KEY = "board_rank";
+    public static final String BOARD_RANK_KEY = "board_rank";
     private static final String BOARD_RANK_VALID_KEY = "board_rank_valid";
     private static final String BOARD_THRESHOLD_KEY = "board_threshold";
     private static final String BOARD_INITIAL_COUNT = "0";
     public static final String BOARD_KEY_DELIMITER = ":";
     public static final int BOARD_KEY_PARTS_LENGTH = 2;
-    public static final int BOARD_NAME_INDEX = 0;
     public static final int BOARD_ID_INDEX = 1;
-    private static final long KEY_LIVE_TIME = 301L;
+    private static final long KEY_LIVE_TIME = 7201L;
     private static final long BOARD_TIME_UP_50 = 300L;
     private static final long BOARD_TIME_UP_100 = 600L;
     private static final int KEY_EXPIRE = 0;
@@ -62,15 +63,17 @@ public class BoardRedisService {
     private final BoardRepository boardRepository;
     private final PostViewService postViewService;
     private final PostLikesService postLikesService;
+    private final BoardSummaryRepository boardSummaryRepository;
 
-    public void saveBoardRedis(BoardSaveDto boardSaveDto, int score) {
+    public void saveBoardRedis(BoardSaveDto boardSaveDto, double score) {
         String key = boardSaveDto.getBoardName() + BOARD_KEY_DELIMITER + boardSaveDto.getBoardId();
         long keyLiveTime = KEY_LIVE_TIME;
 
-        Long currentExpire = redisTemplate.getExpire(key, TimeUnit.SECONDS);
-        if (currentExpire != null && currentExpire > KEY_EXPIRE) {
-            keyLiveTime += currentExpire;
-        }
+        // 기존 키의 TTL이 남아 있을 경우 새로운 시간이 할당되지 않고, 기존 시간이 그대로 유지되는 버그 때문에 주석 처리
+//        Long currentExpire = redisTemplate.getExpire(key, TimeUnit.SECONDS);
+//        if (currentExpire != null && currentExpire > KEY_EXPIRE) {
+//            keyLiveTime = currentExpire;
+//        }
 
         redisTemplate.opsForValue().set(key, BOARD_INITIAL_COUNT);
         redisTemplate.expire(key, keyLiveTime, TimeUnit.SECONDS);
@@ -94,34 +97,47 @@ public class BoardRedisService {
 
             int postCount = Integer.parseInt(postCountStr);
             String threshold50 = boardName + BOARD_KEY_DELIMITER + boardId + BOARD_KEY_DELIMITER
-                    + BOARD_TIME_UP_50_THRESHOLD;
+                + BOARD_TIME_UP_50_THRESHOLD;
             String threshold100 = boardName + BOARD_KEY_DELIMITER + boardId + BOARD_KEY_DELIMITER
-                    + (postCount / BOARD_TIME_UP_100_THRESHOLD) * BOARD_TIME_UP_100_THRESHOLD;
+                + (postCount / BOARD_TIME_UP_100_THRESHOLD) * BOARD_TIME_UP_100_THRESHOLD;
 
             if (postCount == BOARD_TIME_UP_50_THRESHOLD && !Boolean.TRUE.equals(
-                    redisTemplate.opsForSet()
-                            .isMember(BOARD_THRESHOLD_KEY, threshold50))) {
+                redisTemplate.opsForSet()
+                    .isMember(BOARD_THRESHOLD_KEY, threshold50))) {
                 log.info("{} 게시판의 게시글 수가 50개 도달, 시간 5분 추가!", boardName);
                 extendBoardExpireTime(key, currentExpireTime, BOARD_TIME_UP_50, threshold50);
             } else if (postCount % BOARD_TIME_UP_100_THRESHOLD == 0 && !Boolean.TRUE.equals(
-                    redisTemplate.opsForSet()
-                            .isMember(BOARD_THRESHOLD_KEY, threshold100))) {
+                redisTemplate.opsForSet()
+                    .isMember(BOARD_THRESHOLD_KEY, threshold100))) {
                 log.info("{} 게시판의 게시글 수가 100개 도달, 시간 10분 추가!", boardName);
                 extendBoardExpireTime(key, currentExpireTime, BOARD_TIME_UP_100, threshold100);
             }
             log.info("{} 게시판의 증가 후 남은 시간은 {}입니다", boardName,
-                    redisTemplate.getExpire(key, TimeUnit.SECONDS));
+                redisTemplate.getExpire(key, TimeUnit.SECONDS));
         }
     }
 
     private void extendBoardExpireTime(String key, Long currentExpireTime, long additionalSeconds,
-            String thresholdKey) {
+        String thresholdKey) {
+        // 실시간 게시판의 남은 시간(TTL)이 증가
         redisTemplate.expire(key, currentExpireTime + additionalSeconds, TimeUnit.SECONDS);
         redisTemplate.opsForSet().add(BOARD_THRESHOLD_KEY, thresholdKey);
 
+        // TTL이 증가하는 만큼 score도 증가
+        Double currentScore = redisTemplate.opsForZSet()
+            .score(BOARD_RANK_KEY, key); // 현재 저장된 만료 시간을 가져옴
+        if (currentScore == null) {
+            return; // 실시간 게시판이 아직 등록되지 않은 경우
+        }
+
+        // 실시간 게시판의 score로 증가된 시간이 세팅
+        Instant currentExpireScore = Instant.ofEpochMilli(currentScore.longValue());
+        Instant newExpireScore = currentExpireScore.plus(additionalSeconds, ChronoUnit.SECONDS);
+        redisTemplate.opsForZSet().add(BOARD_RANK_KEY, key, newExpireScore.toEpochMilli());
+
         String boardName = key.split(Pattern.quote(BOARD_KEY_DELIMITER))[0];
         redisPublisher.publishRealTimeBoardTimeUpEvent(
-                RealTimeBoardTimeUpEvent.from(boardName, additionalSeconds));
+            RealTimeBoardTimeUpEvent.from(boardName, additionalSeconds));
     }
 
     /**
@@ -138,7 +154,7 @@ public class BoardRedisService {
 
     public void setRankValidListTime() {
         String validTime = Long.toString(
-                LocalTime.now().plusSeconds(KEY_LIVE_TIME).toSecondOfDay());
+            LocalTime.now().plusSeconds(KEY_LIVE_TIME).toSecondOfDay());
         redisTemplate.opsForValue().set(BOARD_RANK_VALID_KEY, validTime);
     }
 
@@ -149,8 +165,8 @@ public class BoardRedisService {
         }
 
         allRankKey.stream()
-                .filter(key -> !Boolean.TRUE.equals(redisTemplate.hasKey(key)))
-                .forEach(key -> redisTemplate.opsForZSet().remove(BOARD_RANK_KEY, key));
+            .filter(key -> !Boolean.TRUE.equals(redisTemplate.hasKey(key)))
+            .forEach(key -> redisTemplate.opsForZSet().remove(BOARD_RANK_KEY, key));
 
         Set<String> thresholdSet = redisTemplate.opsForSet().members(BOARD_THRESHOLD_KEY);
         if (thresholdSet == null || thresholdSet.isEmpty()) {
@@ -158,11 +174,11 @@ public class BoardRedisService {
         }
 
         thresholdSet.stream()
-                .filter(key -> {
-                    String boardKey = key.substring(0, key.lastIndexOf(BOARD_KEY_DELIMITER));
-                    return !Boolean.TRUE.equals(redisTemplate.hasKey(boardKey));
-                })
-                .forEach(key -> redisTemplate.opsForSet().remove(BOARD_THRESHOLD_KEY, key));
+            .filter(key -> {
+                String boardKey = key.substring(0, key.lastIndexOf(BOARD_KEY_DELIMITER));
+                return !Boolean.TRUE.equals(redisTemplate.hasKey(boardKey));
+            })
+            .forEach(key -> redisTemplate.opsForSet().remove(BOARD_THRESHOLD_KEY, key));
     }
 
     /**
@@ -186,59 +202,55 @@ public class BoardRedisService {
     @Transactional // 조회수, 좋아요 개수 데이터 동기화를 하나의 트랜잭션으로 묶는다.
     public BoardPagingResponseDto findAllRealTimeBoardPaging(
         BoardPagingRequestDto boardPagingRequestDto) {
-        Set<String> boardKeys = getBoardRank(boardPagingRequestDto.getPage(), boardPagingRequestDto.getSize());
+        int page = boardPagingRequestDto.getPage(); // 0
+        int size = boardPagingRequestDto.getSize(); // 5
+        // Redis에서의 조회는 0부터 시작하므로, size로 받은 숫자에서 1을 뺀 값을 사용한다.
+        int start = page * size; // 0
+        int end = start + size - 1; // 4
+        List<TypedTuple<String>> boardRankList = getBoardRankList(start, end);
 
-        if (boardKeys == null || boardKeys.isEmpty()) {
-            return BoardPagingResponseDto.from(Collections.emptyList());
+        if (boardRankList == null || boardRankList.isEmpty()) {
+            return BoardPagingResponseDto.from(0, 0, Collections.emptyList());
         }
-
         // Redis에서 조회한 실시간 게시판 목록 데이터에서 boardId 값만 추출하여 List를 생성한다.
-        List<Long> boardIdList = extractBoardIdList(boardKeys);
+        List<Long> boardIdList = extractBoardIdList(boardRankList);
+
+        // DB에서 실시간 게시판 목록 조회 후 Map으로 변환
+        Map<Long, RealtimeBoardDto> realtimeBoardMap = boardRepository.findRealtimeBoardsByIds(
+            boardIdList).stream().collect(
+            Collectors.toMap(RealtimeBoardDto::getBoardId, realtimeBoard -> realtimeBoard));
 
         // 조회수와 좋아요 개수 동기화
         postViewService.syncViewCountToDatabase();
         postLikesService.syncLikesToDatabase();
 
-        // DB에서 실시간 게시판 목록 조회
-        List<RealtimeBoardDto> realtimeBoardList = boardRepository.findRealtimeBoardsByIds(boardIdList);
-
-        // Redis Pipeline을 이용해서 각 Board 별 TTL과 zScore 조회
-        List<Object> results = getTtlAndScorePipeline(boardKeys);
-
         // realtimeBoardList에 ttl과 zScore를 매핑
-        IntStream.range(0, realtimeBoardList.size())
-            .forEach(i -> {
-                RealtimeBoardDto realtimeBoardDto = realtimeBoardList.get(i);
-                // result에 ttl과 zScore값이 번갈아가면서 들어있다. {ttl_0, zScore_0, ttl_1, zScore_1 ...}
-                realtimeBoardDto.setBoardLiveTime((Long) results.get(i * 2));
-                realtimeBoardDto.setScore((Double) results.get(i * 2 + 1));
-            });
+        long now = Instant.now().toEpochMilli();
+        List<RealtimeBoardDto> realtimeBoardList = IntStream.range(0, boardIdList.size())
+            .mapToObj(i -> {
+                Long boardId = boardIdList.get(i);
+                RealtimeBoardDto realtimeBoardDto = realtimeBoardMap.get(boardId);
+                Double score = boardRankList.get(i).getScore();
+                // boardLiveTime는 score의 정수부를 long으로 변환하여 현재 시간과 차이를 계산 (ms 단위)
+                long boardLiveTimeInMs = (score.longValue() * -1) - now;
+                // boardLiveTime을 초 단위로 변환하여 설정
+                realtimeBoardDto.setBoardLiveTime(boardLiveTimeInMs / 1000);
+                // score는 page가 0일 경우 0 ~ 9, page가 1일 경우 10 ~ 19, ... 와 같이 설정
+                realtimeBoardDto.setScore((i + 1) + (page * 10));
 
-        // boardLiveTime을 기준으로 1차 정렬, boardLiveTime이 같은 경우 score를 기준으로 2차 정렬
-        List<RealtimeBoardDto> sortedRealTimeBoardList = realtimeBoardList.stream()
-            .sorted(Comparator.comparingLong(RealtimeBoardDto::getBoardLiveTime).reversed()
-                .thenComparingDouble(RealtimeBoardDto::getScore))
-            .collect(Collectors.toList());
+                return realtimeBoardDto;
+            }).toList();
 
-        return BoardPagingResponseDto.from(sortedRealTimeBoardList);
+        Long realtimeBoardCount = redisTemplate.opsForZSet().zCard(BOARD_RANK_KEY);// 캐시에서 실시간 게시판 목록의 사이즈 조회
+        long totalPages = (long) Math.ceil(
+            (double) realtimeBoardCount / boardPagingRequestDto.getSize());
+        return BoardPagingResponseDto.from(totalPages, realtimeBoardCount, realtimeBoardList);
     }
 
-    private List<Object> getTtlAndScorePipeline(Set<String> boardKeys) {
-        List<Object> results = redisTemplate.executePipelined(
-            (RedisCallback<Object>) connection -> {
-                for (String boardKey : boardKeys) {
-                    connection.keyCommands().ttl(boardKey.getBytes());
-                    connection.zSetCommands()
-                        .zScore(BOARD_RANK_KEY.getBytes(), boardKey.getBytes());
-                }
-                return null;
-            });
-        return results;
-    }
-
-    private static List<Long> extractBoardIdList(Set<String> boardKeyList) {
-        return boardKeyList.stream()
-            .map(key -> {
+    private static List<Long> extractBoardIdList(List<TypedTuple<String>> boardRankSet) {
+        return boardRankSet.stream()
+            .map(value -> {
+                String key = value.getValue();
                 String[] parts = key.split(BOARD_KEY_DELIMITER);
                 if (parts.length < BOARD_KEY_PARTS_LENGTH) {
                     return null;
@@ -247,6 +259,15 @@ public class BoardRedisService {
             })
             .filter(Objects::nonNull)
             .toList();
+    }
+
+    public List<TypedTuple<String>> getBoardRankList(int start, int end) {
+        Set<TypedTuple<String>> boardRankSet = redisTemplate.opsForZSet()
+            .rangeWithScores(BOARD_RANK_KEY, start, end);
+        if (boardRankSet == null || boardRankSet.isEmpty()) {
+            return new ArrayList<>();
+        }
+        return new ArrayList<>(boardRankSet);
     }
 
     public Set<String> getBoardRank(int start, int end) {
@@ -259,19 +280,27 @@ public class BoardRedisService {
 
     public BoardInfoDto getBoardInfo(Long boardId) {
         Boards findBoard = boardRepository.findById(boardId)
-                .orElseThrow(() -> new NotFoundException(NOT_EXIST_BOARD));
+            .orElseThrow(() -> new NotFoundException(NOT_EXIST_BOARD));
 
         String key = findBoard.getName() + BOARD_KEY_DELIMITER + findBoard.getId();
-        Long boardLiveTime = redisTemplate.getExpire(key, TimeUnit.SECONDS);
+        long score = redisTemplate.opsForZSet().score(BOARD_RANK_KEY, key).longValue() * -1;
 
-        // 게시판 만료 시각을 ms 단위로 계산
-        Long expiredBoardTime = System.currentTimeMillis() + (boardLiveTime * 1000);
+        // 게시판의 남은 시간 (ms 단위)
+        long now = Instant.now().toEpochMilli();
+        long boardLiveTime = score - now;
+
+        // AI 요약 정보 조회
+        BoardSummary boardSummary = boardSummaryRepository.findByBoards_Id(findBoard.getId())
+            .orElse(BoardSummary.builder()
+                .summary(null)
+                .build());
 
         return BoardInfoDto.builder()
-                .boardId(findBoard.getId())
-                .boardName(findBoard.getName())
-                .boardLiveTime(boardLiveTime)
-                .boardExpiredTime(expiredBoardTime)
-                .build();
+            .boardId(findBoard.getId())
+            .boardName(findBoard.getName())
+            .boardLiveTime(boardLiveTime / 1000) // 초 단위로 변환
+            .boardExpiredTime(score)
+            .summary(boardSummary.getSummary())
+            .build();
     }
 }
